2049
So on the command line the problem is there is a class required by RPManager that is not present. And that is throwing things off. Somehow the Eclipse plugin is hiding the root cause (the missing dependency) and because that causes the class I'm trying to use to have trouble loading, I get a cryptic error that says it has no constructor. We need the real error to be surfaced in the errors somehow. The missing constructor error is a red herring.

$$ scalac -classpath ~/Desktop/rpbean/lib/rpbean.jar -sourcepath src src/com/foo/bar/rpbeantest/RPTestScala.scala 
error: error while loading RPManager, class file '/Users/splee/Desktop/rpbean/lib/rpbean.jar(com/epiphany/rpbean/RPManager.class)' is broken
(class com.epiphany.shr.util.logging.ILoggerCategory not found.)
src/com/apple/store/rpbeantest/RPTestScala.scala:44: error: com.epiphany.rpbean.RPManager does not have a constructor
    val manager = new RPManager()
                  ^
two errors found
